<?xml version="1.0"?>
<package format="2">
  <name>env_provider</name>
  <version>0.0.0</version>
  <description>Create an Underworlds world with a static description of the environment</description>
  <maintainer email="ysallami@laas.fr">Yoan Sallami</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/env_provider</url> -->

  <author email="ysallami@laas.fr">Yoan Sallami</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
